--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <!-- Favicon -->
     <link rel="icon" href="apple-touch-icon.png" type="image/png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
         :root {
-            /* Color palette matching the reference image */
+            /* Color palette */
             --bg-color: #f0ece3;
-            --text-dark: #D20A2E; /* Updated to match the new TensorFlow red */
+            --text-dark: #D20A2E; /* TensorFlow red */
             --outline-color: #bebaa9;
+            --espresso-color: #d4c4b0; /* Light warm tan */
         }
 
         body, html {
@@ -20,34 +23,32 @@
             padding: 0;
             background-color: var(--bg-color);
             font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            /* Hide horizontal scrollbar to prevent wobbling */
             overflow-x: hidden; 
         }
 
         /* --- BACKGROUND LAYER --- */
         .bg-layer {
-            position: fixed; 
-            top: -100vh; /* Start much higher to prevent blank space when scrolling */
+            position: fixed;
+            top: -200vh;
             left: 0;
             width: 100vw;
-            height: 300vh; /* Increased height to ensure it covers the screen during full scroll */
+            height: 600vh;
             z-index: 1;
             display: flex;
             flex-direction: column;
-            pointer-events: none; /* Prevents text selection on the background */
+            pointer-events: none;
         }
 
         .bg-line {
-            font-size: 11vw; /* Responsive font sizing */
+            font-size: 11vw; 
             font-weight: 800;
             color: transparent;
-            /* Creates the hollow text effect */
             -webkit-text-stroke: 1.5px var(--outline-color);
             line-height: 1.1;
             white-space: nowrap;
             text-align: left;
             width: 200vw;
-            margin-left: 0vw; /* Shifted left to balance Farbeen and Tommy */
+            margin-left: 0vw; 
             letter-spacing: -0.02em;
         }
 
@@ -56,12 +57,11 @@
             position: relative;
             z-index: 2;
             width: 100%;
-            /* Make the page 250% of the screen height to allow for plenty of scrolling */
             height: 250vh; 
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            padding: 45vh 0; /* Increased to center the top/bottom text precisely on screen */
+            padding: 45vh 0; 
             box-sizing: border-box;
         }
 
@@ -74,8 +74,6 @@
             text-transform: uppercase;
             line-height: 1;
             letter-spacing: -0.03em;
-            /* Adds a subtle background-colored outline to the solid text so it remains 
-               readable even if it overlaps perfectly with the background text lines */
             text-shadow: 
                 -4px -4px 0 var(--bg-color),  
                  4px -4px 0 var(--bg-color),
@@ -83,51 +81,300 @@
                  4px  4px 0 var(--bg-color);
         }
 
-        /* Custom spacing to format "SAN FRANCISCO" nicely */
         .location {
             word-spacing: 2vw;
         }
 
+        /* --- NEW: COFFEE RAVE SECTION --- */
+        .coffee-section {
+            position: relative;
+            height: 100vh; 
+            width: 100vw;
+            z-index: 3; /* Above the background, below the flood */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            /* Transparent background so the parallax text shows through! */
+            background-color: transparent; 
+        }
+
+        .machine-container {
+            position: relative;
+            z-index: 10;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        /* Styling the 'Lock in' text to match your theme */
+        .lock-text {
+            font-size: 8vw;
+            margin-bottom: 2rem;
+            z-index: 11;
+        }
+
+        /* The SVG Espresso Machine */
+        .svg-machine {
+            position: relative;
+            width: 300px;
+            height: 150px;
+            z-index: 10;
+        }
+
+        .espresso-liquid {
+            position: absolute;
+            top: 110px; /* Starts right at the tip of the portafilter spout */
+            left: 50%;
+            transform: translateX(-50%);
+            width: 12px;
+            height: 0px; /* Starts hidden */
+            background-color: var(--espresso-color);
+            border-radius: 0 0 10px 10px;
+            z-index: 9;
+        }
+
+        /* The expanding background circle */
+        .espresso-flood {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 10px;
+            height: 10px;
+            background-color: var(--espresso-color);
+            border-radius: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            z-index: 20; /* Covers everything */
+            pointer-events: none;
+        }
+
+        /* --- THE AGENDA --- */
+        .agenda-content {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            z-index: 30; /* Highest z-index, above the flood */
+            text-align: center;
+            width: 90%;
+            max-width: 1100px;
+            opacity: 0; /* Hidden initially */
+            color: #333; /* Dark text for light background */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Cursive style for the agenda title */
+        .agenda-title {
+            font-family: 'Cedarville Cursive', cursive;
+            font-size: 8vw;
+            font-weight: normal;
+            color: var(--text-dark);
+            text-shadow: none;
+            margin-bottom: 2rem;
+            text-transform: none;
+        }
+
+        .agenda-list {
+            list-style: none;
+            padding: 0;
+            font-size: 2vw;
+            font-weight: bold;
+            line-height: 1.5;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            width: 100%;
+            max-width: 1000px;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        .agenda-list li {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            align-items: center;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+            padding-bottom: 0.5rem;
+        }
+
+        .agenda-list span.event {
+            color: var(--text-dark);
+            white-space: nowrap;
+            text-align: left;
+        }
+
+        .agenda-list span.location {
+            color: #333;
+            white-space: nowrap;
+            text-align: center;
+        }
+
+        .agenda-list span.time {
+            color: var(--text-dark);
+            white-space: nowrap;
+            text-align: right;
+        }
+
+        .more-details {
+            font-family: 'Cedarville Cursive', cursive;
+            margin-top: 2rem;
+            font-size: 2vw;
+            font-style: normal;
+            opacity: 0.7;
+        }
+
+        /* Mobile Adjustments */
+        @media (max-width: 768px) {
+            .agenda-title { font-size: 12vw; }
+            .agenda-list { font-size: 3.5vw; }
+            /* Stack the event, location, and time on mobile */
+            .agenda-list li {
+                grid-template-columns: 1fr;
+                text-align: center;
+                gap: 0.25rem;
+            }
+            .agenda-list span.event,
+            .agenda-list span.location,
+            .agenda-list span.time {
+                text-align: center;
+            }
+            .more-details { font-size: 4vw; }
+            .lock-text { font-size: 12vw; }
+        }
     </style>
 </head>
 <body>
 
-    <!-- This div holds the repeating background text -->
-    <div class="bg-layer" id="parallax-bg"></div>
+    <!-- 1. Background Parallax Layer -->
+    <div class="bg-layer" id="parallax-bg">
+        <!-- Text is injected via JS to keep the HTML clean -->
+    </div>
 
-    <!-- This div holds the bold scrolling text -->
+    <!-- 2. Foreground Initial Scroll Content -->
     <div class="content-layer">
         <h1 class="fg-text">SEPT 19 2026</h1>
         <h1 class="fg-text location">SAN FRANCISCO</h1>
         <h1 class="fg-text">SAVE THE DATE</h1>
     </div>
 
+    <!-- 3. The GSAP Coffee Rave Section -->
+    <section class="coffee-section">
+        <div class="machine-container">
+            <h1 class="fg-text lock-text">LOCK IN TO PARTY</h1>
+
+            <div class="svg-machine">
+                <svg width="300" height="150" viewBox="0 0 300 150">
+                    <!-- Machine Base / Grouphead -->
+                    <path d="M 80 0 L 220 0 L 220 40 L 80 40 Z" fill="#d4d1c4" />
+                    <path d="M 100 40 L 200 40 L 190 60 L 110 60 Z" fill="#a8a496" />
+                    <path d="M 115 60 L 185 60 L 185 65 L 115 65 Z" fill="#7a7668" />
+
+                    <!-- Portafilter Group (This is what rotates) -->
+                    <g class="portafilter">
+                        <!-- Basket -->
+                        <path d="M 115 65 L 185 65 L 175 95 L 125 95 Z" fill="#222" />
+                        <!-- Spout -->
+                        <path d="M 145 95 L 155 95 L 155 110 L 145 110 Z" fill="#888" />
+                        <!-- Handle -->
+                        <rect x="180" y="70" width="100" height="15" rx="7.5" fill="#111" />
+                    </g>
+                </svg>
+                <div class="espresso-liquid"></div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Fixed overlay elements (outside coffee-section for proper fixed positioning) -->
+    <div class="espresso-flood"></div>
+    <div class="agenda-content">
+        <h2 class="agenda-title">Details</h2>
+        <ul class="agenda-list">
+            <li><span class="event">Dinner</span> <span class="location">TBD</span> <span class="time">6:00 PM</span></li>
+            <li><span class="event">Party</span> <span class="location">Hedge Coffee</span> <span class="time">10:30 PM</span></li>
+        </ul>
+        <p class="more-details">More details to come...</p>
+    </div>
+
+    <!-- GSAP Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
     <script>
-        // 1. Generate the repeating background text
+        // --- 1. GENERATE BACKGROUND TEXT ---
         const bgLayer = document.getElementById('parallax-bg');
-        const numLines = 80; // Increased to ensure enough lines fill the extra height
-        
+        const numLines = 150; // Plenty of lines to cover the huge scroll depth
         let bgHtml = '';
         for (let i = 0; i < numLines; i++) {
-            // Repeating the names multiple times so it stretches across any screen width
             bgHtml += '<div class="bg-line">FARBEEN&TOMMY FARBEEN&TOMMY FARBEEN&TOMMY FARBEEN&TOMMY</div>';
         }
         bgLayer.innerHTML = bgHtml;
 
-        // 2. Handle the Parallax Scroll Effect
+        // --- 2. PARALLAX SCROLL EFFECT ---
         let ticking = false;
-        
         window.addEventListener('scroll', () => {
             if (!ticking) {
                 window.requestAnimationFrame(() => {
                     const scrollPos = window.scrollY;
-                    // Move the background downwards at 40% the speed of the user's scroll
+                    // Move background at 40% speed
                     bgLayer.style.transform = `translateY(${scrollPos * 0.4}px)`;
                     ticking = false;
                 });
                 ticking = true;
             }
         });
+
+        // --- 3. GSAP COFFEE RAVE ANIMATION ---
+        gsap.registerPlugin(ScrollTrigger);
+
+        // Pre-rotate the portafilter handle (so it starts "unlocked")
+        // transformOrigin is set precisely to the center of the coffee basket in the SVG
+        gsap.set(".portafilter", { rotation: -50, transformOrigin: "150px 65px" });
+
+        // Set initial centering for agenda-content using GSAP (avoids CSS transform conflicts)
+        gsap.set(".agenda-content", { xPercent: -50, yPercent: -50 });
+
+        // Create the scroll-bound timeline
+        const tl = gsap.timeline({
+            scrollTrigger: {
+                trigger: ".coffee-section",
+                start: "top top", // Pin when section hits top of screen
+                end: "+=350%",    // User scrolls 3.5x screen height to complete animation
+                scrub: 1,         // Smooth scrubbing tied to scrollbar
+                pin: true,        // Pin the entire section in place
+            }
+        });
+
+        tl.to(".portafilter", {
+            rotation: 0, 
+            duration: 1.5,
+            ease: "power2.inOut"
+        })
+        .to(".espresso-liquid", {
+            height: "120vh", // Drop liquid past the bottom of the screen
+            duration: 2,
+            ease: "power1.in"
+        })
+        // Fade out the machine and text as the pour finishes
+        .to(".machine-container", {
+            opacity: 0,
+            duration: 0.5
+        }, "-=0.5") 
+        // Blow up the espresso circle to flood the screen
+        .to(".espresso-flood", {
+            scale: 250, 
+            duration: 2.5,
+            ease: "power3.inOut"
+        }, "-=0.2")
+        // Finally, fade in the new Rave Agenda
+        .to(".agenda-content", {
+            opacity: 1,
+            duration: 1.5,
+            ease: "power2.out"
+        });
     </script>
+
 </body>
 </html>
