make details lower case

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     <!-- Fixed overlay elements (outside coffee-section for proper fixed positioning) -->
     <div class="espresso-flood"></div>
     <div class="agenda-content">
-        <h2 class="agenda-title">Details</h2>
+        <h2 class="agenda-title">details</h2>
         <ul class="agenda-list">
             <li><span class="event">Dinner</span> <span class="location">TBD</span> <span class="time">6:00 PM</span></li>
             <li><span class="event">Party</span> <span class="location">Hedge Coffee</span> <span class="time">10:30 PM</span></li>
