--- a/index.html
+++ b/index.html
@@ -335,10 +335,10 @@
         <ul class="agenda-list">
             <li><span class="event">Dinner</span> <span class="location">TBD</span> <span class="time">6:00 PM</span>
             </li>
-            <li><span class="event">Party</span> <span class="location">Hedge Coffee</span> <span class="time">10:30
-                    PM</span></li>
+            <li><span class="event">Party</span> <span class="location">Hedge<span
+                        style="margin-left: 0.5em;">Coffee</span></span> <span class="time">10:30 PM</span></li>
         </ul>
-        <p class="more-details">More details to come...</p>
+        <p class="more-details">more to come ...</p>
     </div>
 
     <!-- GSAP Libraries -->
